# todo_api

./: todo.db
api/: Cargo.toml
api/src/: todo_handler.rs
application/: Cargo.toml
application/src/todo/: read.rs
domain/: Cargo.toml
domain/src/: models.rs  schema.rs
infrastructure/: Cargo.toml
infrastructure/src/: lib.rs
migrations/2023-06-23-182705_create_todos/: up.sql
shared/: Cargo.toml
shared/src/: response_models.rs
