[package]
name = "application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
shared = { path = "../shared" }

diesel = { version = "2.1.0", features = ["sqlite"] }
serde_json = "1.0.97"
rocket = { version = "0.5.0-rc.3", features = ["json"] }